added a day warning and new styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="choose-week">
             <span id="weekRange"></span>
-            <p>Order between 2:30pm to 8:30am</p>
+            <p>Order between 2:30pm to 8:30am for the upcoming days!</p>
         </div>
 
         <div class="days" id="days"></div>
