--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         </div>
 
         <div class="choose-week">
-            <span id="weekRange"></span>
-            <p>Order between 2:30pm to 8:30am for the upcoming days!</p>
+            <!-- <span id="weekRange"></span> -->
+            <p>Just $8 per meal! <br> Tasty, kid-friendly meals <br> available Monday - Friday</p>
+            <p>Pre order the night before! <br> 3pm until 8am</p>
         </div>
 
         <div class="days" id="days"></div>
