trying new styles

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <h2>Hot Lunch Order</h2>
         </div>
 
-        <div class="choose-week">
+        <div class="description">
             <!-- <span id="weekRange"></span> -->
-            <p>Just $8 per meal! <br> Tasty, kid-friendly meals <br> available Monday - Friday</p>
-            <p>Pre order the night before! <br> 3pm until 8am</p>
+            <p>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</p>
+            <p>Pre order the night before! 3pm until 8am</p>
         </div>
 
         <div class="days" id="days"></div>
