some styles changed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="days" id="days"></div>
 
         <div class="specific-requests">
-            <label for="requests" rows="2">Special requests and the names of <br> the children</label>
+            <label for="requests" rows="2">Special requests/name of children and school</label>
             <textarea name="requests" id="requests"></textarea>
         </div>
 
