added mandatory school name

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chabad School Lunches</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles-mobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +29,6 @@
         </div>
 
         <div class="description">
-            <!-- <span id="weekRange"></span> -->
             <p>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</p>
             <p>Pre order the night before! 3pm until 8am</p>
         </div>
@@ -36,7 +36,7 @@
         <div class="days" id="days"></div>
 
         <div class="specific-requests">
-            <label for="requests" rows="2">Special requests/name of children and school</label>
+            <label for="requests" rows="2">Special requests, name of children and school <span class="disclaimer">(if from Gan, please add class name)</span></label>
             <textarea name="requests" id="requests"></textarea>
         </div>
 
