changed the style to old retro

--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
 
     <div class="header">
         <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
-        <h1>Yummy Kosher Grill</h1>
+        <h2>Yummy Kosher Grill</h2>
+    </div>
+
+    <div class="info">
+        <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
+        <h4>Pre order the night before! 3pm until 8am</h4>
     </div>
 
     <div class="main-container">
-
-        <div class="container-header">
-            <h2>Hot Lunch Order</h2>
-        </div>
-
-        <div class="description">
-            <p>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</p>
-            <p>Pre order the night before! 3pm until 8am</p>
-        </div>
 
         <div class="days" id="days"></div>
 
@@ -45,6 +41,10 @@
             <button class="order-btn">Order Now</button>
         </div>
 
+    </div>
+
+    <div class="footer">
+        <h4>Contact us: 732-963-5351</h4>
     </div>
 
 
