--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Yummy Kosher Grill</h2>
     </div>
 
-    <div class="info">
+    <!-- <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
     </div>
@@ -41,6 +41,10 @@
             <button class="order-btn">Order Now</button>
         </div>
 
+    </div> -->
+
+    <div class="closed">
+        <h1>The restaurant is closed this week. See you next week!</h1>
     </div>
 
     <div class="footer">
