--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="header">
         <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
         <h2>Yummy Kosher Grill</h2>
+        <h2>Yom Tov Schedule</h2>
     </div>
 
     <div class="info">
