closed for yom tov

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     <div class="header">
         <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
         <h2>Yummy Kosher Grill</h2>
-        <h2>Yom Tov Schedule</h2>
     </div>
 
-    <div class="info">
+    <div class="yom-tov">
+        <h2>Lunch orders are closed for the Chag.</h2>
+        <h1>!גמר חתימה טובה</h1>
+        <h2>See you next year!</h2>
+    </div>
+    
+    <!-- <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
     </div>
@@ -42,7 +47,7 @@
             <button class="order-btn">Order Now</button>
         </div>
 
-    </div> 
+    </div>  -->
 
 
     <div class="footer">
