--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 <body>
 
     <div class="header">
+        <div class="header-left">
         <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
         <h2>Yummy Kosher Grill</h2>
+        </div>
+        <h3>Parashat Noach</h3>
     </div>
 
     <!-- <div class="yom-tov">
