--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
+        <h2>Menu change!</h2>
     </div>
 
     <div class="main-container">
