closed for channukah

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
         <h3>Parashat Vayeishev</h3>
     </div>
 
-    <!-- <div class="yom-tov">
+    <div class="yom-tov">
         <h2>Lunch orders are closed for the Chag.</h2>
-        <h1>!גמר חתימה טובה</h1>
-        <h2>See you next year!</h2>
+        <h1>Happy Channukah!</h1>
     </div>
-    -->
+   
     
-    <div class="info">
+    <!-- <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
     </div>
@@ -51,7 +50,7 @@
             <button class="order-btn">Order Now</button>
         </div>
 
-    </div>  
+    </div>   -->
 
 
     <div class="footer">
