--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="yom-tov">
-        <h2>Lunch orders are closed for the Chag.</h2>
-        <h1>Happy Channukah!</h1>
+        <h2>Closed for now.</h2>
+        <h1>We'll be back soon!</h1>
     </div>
    
     
