Change parashat from Shemot to Va'eira
Updated the header to reflect the new parashat and removed commented-out sections for clarity.

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
         <h2>Yummy Kosher Grill</h2>
         </div>
-        <h3>Parashat Shemot</h3>
+        <h3>Parashat Va'eira</h3>
     </div>
 
-    <div class="yom-tov">
+   <!-- <div class="yom-tov">
         <h2>Closed for now.</h2>
         <h1>We'll be back soon!</h1>
-    </div>
+    </div> -->
    
     
-    <!-- <div class="info">
+    <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
     </div>
@@ -50,7 +50,7 @@
             <button class="order-btn">Order Now</button>
         </div>
 
-    </div>   -->
+    </div>
 
 
     <div class="footer">
