--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <div class="header">
         <div class="header-left">
-        <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
-        <h2>Yummy Kosher Grill</h2>
+            <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
+            <h2>Yummy Kosher Grill</h2>
         </div>
         <h3>Parashat Va'eira</h3>
     </div>
 
-   <!-- <div class="yom-tov">
+    <!-- <div class="yom-tov">
         <h2>Closed for now.</h2>
         <h1>We'll be back soon!</h1>
     </div> -->
-   
-    
+
+
     <div class="info">
         <h2>Just $8 per meal! Tasty, kid-friendly meals available Monday - Friday</h2>
         <h4>Pre order the night before! 3pm until 8am</h4>
@@ -41,7 +41,8 @@
         <div class="days" id="days"></div>
 
         <div class="specific-requests">
-            <label for="requests" rows="2">Special requests, name of children and school <span class="disclaimer">(if from Gan, please add class name)</span></label>
+            <label for="requests" rows="2">Special requests, name of children and school <span class="disclaimer">(if
+                    from Gan, please add class name)</span></label>
             <textarea name="requests" id="requests"></textarea>
         </div>
 
