fixed the manager page styles

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <h3>Parashat Va'eira</h3>
     </div>
 
-    <!-- <div class="yom-tov">
+    <div class="yom-tov">
         <h2>Closed for now.</h2>
         <h1>We'll be back soon!</h1>
-    </div> -->
+    </div>
 
 
     <div class="info">
@@ -60,6 +60,7 @@
 
 
     <script type="module" src="./script.js"></script>
+    <script type="module" src="closeOrders.js"></script>
 
     <script src="https://js.stripe.com/basil/stripe.js"></script>
 
