--- a/manager.html
+++ b/manager.html
@@ -7,6 +7,7 @@
     <title>Chabad School Lunches</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="manager.css">
+    <link rel="stylesheet" href="managerMobile.css">
 </head>
 
 <body>
@@ -27,17 +28,17 @@
     <div class="actions">
         <div class="closed">
             <h2>Open and Close orders</h2>
-            <button class="close-orders-btn" onclick="closeOrders()">Close Orders</button>
-            <button class="open-orders-btn" onclick="openOrders()">Open Orders</button>
+            <button class="close-orders-btn">Close Orders</button>
+            <button class="open-orders-btn">Open Orders</button>
         </div>
-        <div class="menu">
-            hello
-        </div>
+        <div class="menu"></div>
     </div>
 
 
 
     <script src="manager.js"></script>
+    <script type="module" src="closeOrders.js"></script>
+
 </body>
 
 </html>
