added open and close functionality to the manager page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
     <script type="module" src="./script.js"></script>
-    <script type="module" src="closeOrders.js"></script>
+    <script type="module" src="ordersState.js"></script>
 
     <script src="https://js.stripe.com/basil/stripe.js"></script>
 
