--- a/manager.html
+++ b/manager.html
@@ -28,8 +28,8 @@
     <div class="actions">
         <div class="closed">
             <h2>Open and Close orders</h2>
-            <button class="close-orders-btn">Close Orders</button>
-            <button class="open-orders-btn">Open Orders</button>
+            <button class="close-orders-btn" onclick="closeOrders()">Close Orders</button>
+            <button class="open-orders-btn" onclick="openOrders()">Open Orders</button>
         </div>
         <div class="menu"></div>
     </div>
@@ -37,7 +37,6 @@
 
 
     <script src="manager.js"></script>
-    <script type="module" src="closeOrders.js"></script>
 
 </body>
 
