--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
             <h2>Yummy Kosher Grill</h2>
         </div>
-        <h3>Parashat Va'eira</h3>
+        <h3>Parshat Beshalach</h3>
     </div>
 
     <div class="yom-tov">
