made this a pwa

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Grey+Qo&family=Orbitron:wght@600&family=Varela+Round&display=swap"
         rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
