--- a/manager.html
+++ b/manager.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="manager.css">
     <link rel="stylesheet" href="managerMobile.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
