added update psa for first timers

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 
 <body>
 
+    <div class="temp-update">
+        <h3>X</h3>
+        <h3>New feature!</h3>
+        <h4>
+            Now you can download this site <br> as an app straight from your browser! <br>
+            On iOS, click the share icon in <br> the navigation bar. Click on more and then <br>
+            Add to Home Screen. <br>
+            On Android, click on the three dots, Add to Home screen then install.
+        </h4>
+    </div>
+
+
     <div class="header">
         <div class="header-left">
             <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
