working on manager changing the parsha

--- a/manager.html
+++ b/manager.html
@@ -33,6 +33,11 @@
             <button class="open-orders-btn" onclick="openOrders()">Open Orders</button>
         </div>
         <div class="menu"></div>
+        <div class="parsha">
+            <label for="parsha">Change the parsha:</label>
+            <input type="text" name="parsha" id="new-parsha">
+            <button id="parsha-button">Enter</button>
+        </div>
     </div>
 
 
