--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="./grill-logo.webp" alt="yummy-kosher-grill-logo" height="50px">
             <h2>Yummy Kosher Grill</h2>
         </div>
-        <h3 id="parsha">Parshat Mishpatim</h3>
+        <h3 id="parsha">Parshat Terumah</h3>
     </div>
 
     <div class="yom-tov">
